--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,9 @@
 ---
-title: "ds_s187_s954"
+title: "Applied Data Science for Cities"
 ---
 
-This is a Quarto website.
+Urban analytics draws upon statistics, visualization, and computation to better understand and ultimately shape cities. This course emphasizes telling stories about cities and neighborhoods covering a set of fundamental concepts of descriptive approaches, quantitative and spatial analysis in R, and principles of reproducible data analysis. Students learn to communicate the results of visualization and analysis for use in decision-making and policy development and to critique those processes.
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+# Under Construction
 
-```{r}
-1 + 1
-```
+## This website is under construction, please check back later for updates! 😄
