--- a/labs/lab2.qmd
+++ b/labs/lab2.qmd
@@ -8,9 +8,9 @@ editor: visual
 
 # Overview
 
-This week's Lab Exercise is designed to help you apply some of the tools available within the [tidyverse](https://www.tidyverse.org) for data wrangling. This particular exercise focuses on the [dplyr](https://dplyr.tidyverse.org/index.html) package and the [ggplot2](https://ggplot2.tidyverse.org) package. It also begins to engage with data visualization best practices by demonstrating how to create and interpret a variety of graphics with the *ggplot2* package.
+This week's Lab Exercise focuses on the [dplyr](https://dplyr.tidyverse.org/index.html) package and the [ggplot2](https://ggplot2.tidyverse.org) package. It also begins to engage with data visualization best practices by demonstrating how to create and interpret a variety of graphics.
 
-**Exploratory data analysis (EDA)** is a phase of a larger data science workflow---or perhaps a philosophy---that emphasizes getting to know the data before rushing to analyze it using this more rigid approaches like hypothesis tests. EDA relies heavily on the creation and interpretation of **graphics** in order to build familiarity and gain fundamental insights that can inform more sophisticated analyses later on. Data visualization is arguably the most important tool for exploratory data analysis because the information conveyed by graphical display can be very quickly absorbed and because it is generally easy to recognize patterns in a graphical display. There are several overarching goals of exploratory data analysis, including:
+**Exploratory data analysis (EDA)** is a phase of a larger data science workflow---or perhaps a philosophy---that emphasizes getting to know the data before rushing to analyze it using this more rigid approaches like hypothesis tests. EDA relies heavily on the creation and interpretation of **graphics** in order to build familiarity and gain fundamental insights that can inform more sophisticated analyses later on. There are several overarching goals of exploratory data analysis, including:
 
 1.  To determine if there are any problems with your dataset.
 2.  To determine whether the question you are asking can be answered by the data that you have.
@@ -22,11 +22,11 @@ In the 2017 [Tax Cuts and Jobs Act](https://www.congress.gov/115/bills/hr1/BILLS
 
 If you are interested in the locations of these Opportunity Zones, you can check out [this map](https://opportunityzones.hud.gov/resources/map). The pink geometries reflected on the map are [census tracts](https://www.census.gov/programs-surveys/geography/about/glossary.html#par_textimage_13), which we often use as a proxy for neighborhoods, especially in urban areas. Just find a familiar place, and see which areas have been designated as Opportunity Zones.
 
+## Download data and load packages
+
 Now please navigate to Urban Institute's website about [Opportunity Zones](https://www.urban.org/policy-centers/metropolitan-housing-and-communities-policy-center/projects/opportunity-zones), find the link "Download tract-level data on all Opportunity Zones", and **download this dataset** to your "data" folder within your Lab 2 project folder. Open it in Excel and take a quick look. This data lists tracts nationwide that were designated an Opportunity Zones, along with essential Census demographic data that describe these tracts.
 
-When done well, exploratory data analysis is guided by the [**question(s)**]{style="color: green;"} you are trying to answer. The central question we are exploring in this Lab Exercise is: "Is there a distinguishable difference in economic conditions between designated and not-designated census tracts?" We will explore our data to first determine if there are problems with the dataset then to decide if you can answer your [**question(s)**]{style="color: green;"} with this dataset.
-
-To stay organized, you should load packages at the beginning of your script or markdown document.
+To stay organized, you should load packages at the beginning of your script or markdown document. These are the three packages we are going to use today.
 
 ```{r label="Set Package Repository and Load R Packages", message=FALSE, warning=FALSE, include=FALSE}
 library(readxl)
@@ -38,7 +38,7 @@ library(DataExplorer)
 
 Use `read_xlsx` from the `readxl` package will read Microsoft Excel files into data tables.
 
-```{r label="Read data", message=FALSE, warning=FALSE, include=FALSE}
+```{r label="Read data", message=FALSE, warning=FALSE}
 ozs <- read_xlsx("../data/urbaninstitute_tractlevelozanalysis_update01142021.xlsx")
 ```
 
@@ -57,9 +57,9 @@ Here are the column definitions:
 -   **medrent**: median gross rent (per month)
 -   **vacancyrate**: residential vacancy rate
 -   **unemprate:** unemployment rate
--   **pctwhitealone**: white population (%)
--   **pctblackalone**: black population (%)
--   **pctHispanic**: latino population (%)
+-   **pctwhite**: White non-Hispanic population (%)
+-   **pctblack**: Black non-Hispanic population (%)
+-   **pctHispanic**: Hispanic and Latino population (%)
 -   **Metro**: tract in a metropolitan area
 
 ------------------------------------------------------------------------
@@ -79,7 +79,7 @@ Insert a new code chunk and experiment with a few of these functions. What each 
 
 ------------------------------------------------------------------------
 
-Beside the basic data structures, There are a few other things I'll encourage you to inspect during the initial check process:
+Beside examining the basic data structures, There are a few other things I'll encourage you to inspect during the initial check process:
 
 **Completeness**
 
@@ -146,7 +146,7 @@ The code chunk below creates a **boxplot** to contrast the distribution of pover
 -   `geom_boxplot()`: Recall that geometric layers are called **geoms**. It tells R what kind of geometry you want to use visualize the data.
 -   `aes(x = DesignatedOZ, y = PovertyRate)`: The `aes()` function is where you tell `ggplot` which variable goes on the x axis followed by which variable goes on the y axis.
 -   The `labs` function sets the labels. Because the legend is showing the **fill** component of the plot, we use the **fill** argument in the `labs` function to set the name of the legend itself.
--   We used a new function `scale_y_continuous` to specify y axis properties. Here we are making sure the poverty rate are labeled as percentages. If you remove this line, they will by default show as decimal numbers.
+-   We used a new function `scale_y_continuous` to specify y axis properties. Here we are making sure the poverty rate are labeled as **percentages**. If you remove this line, they will by default show as decimal numbers.
 
 ```{r label="boxplot", message=FALSE, warning=FALSE}
 ggplot(data = ozs) +
@@ -155,7 +155,7 @@ ggplot(data = ozs) +
   labs(title = "", x = "Opportunity Zone Eligible Tracts", y = "Poverty Rate", fill = "Tracts")
 ```
 
-We can create **cross-tabulations** or **contingency tables** as a complement to visual EDA tools like boxplots and histograms. An easy way to do this is to use existing functions in the `dplyr` package. A brief demonstration is given in the code chunk below.
+We can create **cross-tabulations** as a complement to visual EDA tools like boxplots and histograms. An easy way to do this is to use the existing function `count` in the `dplyr` package. A brief demonstration is given in the code chunk below.
 
 ```{r label = "Cross-Tabulation", message=FALSE}
 ozs |> 
@@ -167,9 +167,10 @@ ozs |>
 Insert a new code chunk and a markdown section below this one to "catch" your responses. Please review what we have learned and proceed with the questions below.
 
 1.  Which of the variables (columns) are continuous and which are categorical (e.g., factor)?
-    -   **Hint:** Recall that a variable is categorical if it can only take one of a small set of values and continuous if it can take any of an infinite set of ordered values.
+    -   Hint: Recall that a variable is categorical if it can only take one of a small set of values and continuous if it can take any of an infinite set of ordered values.
     -   Which function or approach did you use to answer this question?
-2.  Are there variables (columns) with missing data values?
+2.  How is the median household income distributed across the places?
+    -   Hint: Should we expect to see a more flat/homogeneous distribution, or a more skewed distribution in terms of fewer households belonging to the higher-income group?
     -   Which function or approach did you use to answer this question?
 3.  Create a graphic that contrasts the distribution of the unemployment rate in designated zones and in undesignated zones in this dataset.
     -   Interpret the graphic(s) you have created and include 2-3 sentences of text explanation (i.e., in an RMarkdown section)
@@ -184,7 +185,7 @@ Let's use a subset of our data - tracts in Massachusetts - to perform this part 
 ozs_ma <- ozs |> filter(state == "Massachusetts") 
 ```
 
-Now we begin by creating a scatterplot of poverty rate and unemployment rate. A [`theme` template](https://ggplot2.tidyverse.org/reference/ggtheme.html) is applied here for a cleaner look.
+Now we begin by creating a scatterplot of poverty rate and unemployment rate. Note that we used `theme_bw`, which is a [`theme` template](https://ggplot2.tidyverse.org/reference/ggtheme.html) for a cleaner look.
 
 ```{r label="Scatterplot-Copper", message=FALSE, warning=FALSE}
 ggplot(ozs_ma) +
@@ -197,7 +198,7 @@ ggplot(ozs_ma) +
   theme_bw()
 ```
 
-What can we say about the hypothesized relationship between the unemployment rate and the poverty rate? As we move from left to right along the x-axis (i.e., as unthe employment rate creases), the amount of poverty rate reported also increases.
+It is generally easy to recognize patterns in a graphical display. As we move from left to right along the x-axis (i.e., as unthe employment rate creases), the amount of poverty rate reported also increases.
 
 As a complement to the scatterplot, we can use the base R `cor` function to calculate the (Pearson by default, see the documentation for other options) **correlation** between any continuous variables in the dataset. The `DataExplorer` package is also designed to help us quickly understand patterns in our data. We demonstrate both in the following code.
 
@@ -219,7 +220,7 @@ ozs_ma |> select(Population:medrent, pctwhite:BAorhigher) |>
   DataExplorer::plot_correlation()
 ```
 
-An additional note to the code above is that we selected several continuous variables that we want to inspect, and removed NA values so that the cocorrelationalues can be correctly calculated.
+An additional note to the code above is that we selected several continuous variables that we want to inspect, and removed NA values so that the correlation values can be correctly calculated.
 
 ------------------------------------------------------------------------
 
@@ -244,17 +245,55 @@ Take a few minutes to read this bar chart below:
 
 ![](../img/lab2-emp.png)
 
-How can we modify our code to replicate the bar chart in this image? You'll notice that you can achieve most of the features by tweaking our previous examples, plus a little bit more exploration. In a new code chunk, please copy and paste our last bar chart code, and try your best to address the following questions.
+How can we modify our code above to replicate the bar chart in this image? You'll notice that you can achieve most of the features by tweaking our previous examples, plus a little bit more exploration. **In a new code chunk,** please copy and paste our last bar chart code, and try your best to address the following questions.
 
 1.  Please add the title, subtitle, x- and y-axis labels, and the data source annotation to your bar chart.
 2.  The background looks much cleaner. Please choose a theme template for your bar chart.
 3.  The x-axis labels are titled to 45 degrees. How can I achieve this? [Hint](https://ggplot2.tidyverse.org/reference/theme.html).
-4.  The labels on the y-axis are formatted in thousands with commas. This can be achieved by using the same function `scale_y_continuous(labels = scales::percent)` we have seen before. [Hint](https://ggplot2.tidyverse.org/reference/scale_continuous.html).
+4.  The labels on the y-axis are formatted in thousands with commas. This can be achieved by modifying the function `scale_y_continuous(labels = scales::percent)` we have seen before. [Hint](https://ggplot2.tidyverse.org/reference/scale_continuous.html).
 5.  Lastly, the counties are not arranged alphabetically, but rather by the income values mapped to the y-axis, starting from large to small. How can I achieve this? [Hint](https://blog.albertkuo.me/post/2022-01-04-reordering-geom-col-and-geom-bar-by-count-or-value/).
+
+# Combinations of basic graphs to create composite views
+
+## Boxplot and violin plots
+
+The compilation of boxplot and violin plot can be effective ways to visualize key statistics and the number of observations throughout the range. There are a few new arguments in the following code for adjusting the aesthetics.\
+`trim = FALSE`: If TRUE (default), trim the tails of the violins to the range of the data. If FALSE, don't trim the tails.\
+`alpha = 0.5`: the transparency of the plotting area.\
+`coord_flip()`: whether the y axis is displayed horizonally or vertically.\
+`legend.position = "none"`: the position of legends ("none", "left", "right", "bottom", "top", or two-element numeric vector).
+
+You can try to remove them or change their values to see how they work.
+
+```{r label="extra-1", message=FALSE, warning=FALSE}
+ggplot(ozs_ma) +
+  geom_violin(aes(x = DesignatedOZ, y = medhhincome, fill = DesignatedOZ), trim = FALSE, alpha = 0.5) +
+  geom_boxplot(aes(x = DesignatedOZ, y = medhhincome), colour = "black", width = .15, alpha = 0.8) +
+  labs(
+    x = "Designated",
+    y = "Median Household Income",
+    title = "Distribution of Median Household Income"
+  ) +
+  coord_flip() +
+  theme(legend.position = "none")
+```
+
+## Scatterplot with marginal histograms
+
+This requires a new package `ggExtra`. But the other syntax should be familiar now.
+
+```{r label="extra-2", message=FALSE, warning=FALSE}
+p <- ggplot(ozs_ma, aes(pctBlack, PovertyRate)) + 
+  geom_point(aes(color = DesignatedOZ)) + 
+  theme_bw()
+ggExtra::ggMarginal(p, type = "histogram", groupFill = TRUE)
+```
 
 # Work Products
 
-Please submit a .qmd file and knitted HTML file that shows your work and responses for each of the **Exercises** included in this lab. Look back at our EDA question "Is there a distinguishable difference in economic conditions between designated and not-designated census tracts?" Discuss what you have found so far and how you would like to further investigate this question.
+Please submit **a .qmd file** and **a** **knitted HTML file** that shows your work and responses for each of the **two** **Exercises** included in this lab.
+
+Is there a distinguishable difference in economic conditions between designated and not-designated census tracts? Please comment on the graphics we have created, and discuss what you have found so far. Talk about any specific aspects you would like to further investigate on this question.
 
 Also, briefly comment on your experience with R during this lab exercise. Please **upload your report to Canvas** **by the end of day, Tuesday, Nov 7.**
 
