--- a/labs/lab1.qmd
+++ b/labs/lab1.qmd
@@ -98,9 +98,54 @@ energy <- read_csv("../data/Cambridge_Building_Energy_and_Water_Use_Data_Disclos
 
 Run your code chunks. You will be able to see in the rendered output the dimensions of the dataset (always written as rows x columns), the names of the columns, and the data type of each column.
 
-# Examine a subset of your data
+# Key `dplyr` functions
 
-We can also explore some of the `tidyverse` package functionality described [here](https://dplyr.tidyverse.org/) and [here](https://info201.github.io/dplyr.html). Take another look at this, then proceed to insert a new code chunk like the one below:
+`dplyr` is a popular R package for data manipulation and transformation. It provides a set of functions that make it easier to work with data frames and data tables in R. Explore more of `dplyr` functionality described [here](https://dplyr.tidyverse.org/) and [here](https://info201.github.io/dplyr.html). We are going to practice some essentials:
+
+## `Select`: selects a subset of **columns.**
+
+While in base R, we do:
+
+`dataset[, c("Column1", "Column2")]`
+
+In `dplyr`, we do:
+
+`dataset |> select(Column1, Column2)`
+
+In other words, we can simply insert the column names into the `select` function, without worrying about syntax like indexing, concatenation (`c()`), and the quotation marks.
+
+In the `energy` dataset, we probably don't need all of the 46 columns. So we can make it a smaller dataset by specifying a few columns to keep. **Insert a new code chunk in your document like this one below.** Here we are using the pipe `|>` operator to "chain together" lines of code. You can type this symbol in using Shift+Ctrl/Command+M.
+
+```{r label="select", message=FALSE, warning=FALSE}
+energy <- energy |>
+  select(
+    `Data Year`,
+    `BEUDO Category`,
+    Owner,
+    `Year Built`,
+    `Primary Property Type - Self Selected`,
+    `Total GHG Emissions (Metric Tons CO2e)`,
+    `Total GHG Emissions Intensity (kgCO2e/ft2)`,
+    Longitude,
+    Latitude
+  ) 
+```
+
+Some of the column names are surrounded by backticks (\`), that's because they include special characters or spaces, which deviate from standard naming conventions. The use of backticks is a means of preserving these unique naming attributes. Just keep typing the column names, dplyr will populate the correct names for you.
+
+## `filter`: Select a subset of **rows**
+
+In base R, we do this to pick observations by their values:
+
+`dataset[dataset$place == “Boston", ]`
+
+In `dplyr`, we do:
+
+`dataset |> filter(place == “Boston")`
+
+Again, a simpler and more understandable syntax.
+
+Now let's create a new dataset that only contains energy use records from MIT buildings and that are not missing the total GHG emission attribute. Take a look at how we achieve this using the following code, then proceed to **insert a new code chunk in your document like the one below**:
 
 ```{r label="createMITdata", message=FALSE, warning=FALSE}
 mit_energy <- energy |> 
@@ -108,75 +153,82 @@ mit_energy <- energy |>
   filter(!is.na(`Total GHG Emissions (Metric Tons CO2e)`))
 ```
 
-The above code uses the pipe `|>` operator to "chain together" lines of code. You can type it in using Shift+Ctrl+M.
+## `mutate`: create or modify columns
 
-Our code above uses the `filter` function from the `dplyr` package (which is also part of `tidyverse` suite) to create a new dataset that only contains energy use records from MIT buildings that are not missing the total GHG emission attribute.
+We can change the values in a column either based on specified values or certain transformations. For example, below we are showing how to replace the full name of the institute with "MIT".
 
-Now we are going to create some summary data using the `MIT_energy` dataset. Go ahead and create another code chunk like the one below:
+```{r label="mutate_1", message=FALSE, warning=FALSE}
+mit_energy |> mutate(Owner = "MIT")
+```
 
-```{r label=annualcount, message=FALSE, warning=FALSE}
+You can also use `mutate` to add new columns to your data frame that are calculated from existing columns. Here we are showing how to create a new column for building ages.
+
+```{r label="mutate_2", message=FALSE, warning=FALSE}
+mit_energy |> mutate(Building_Age = 2023 - `Year Built`)
+```
+
+**There is** **no `<-` operator** in these two code chunks. We are observing the results but the resulting tables **are not saved** in an object.
+
+## Group_by + Summarise
+
+`Summarise` is usually used in conjunction with `group_by` because the latter changes the scope from operating on the entire dataset to operating on it group-by-group. Go ahead and run the following code:
+
+```{r label=annual_count, message=FALSE, warning=FALSE}
 mit_energy |> 
   group_by(`Data Year`) |> 
   summarise(count = n())
 ```
 
-We use `dplyr::group_by` function applied to it such that observations (i.e., rows) are grouped according to the value of this attribute, then the result is passed to the `dplyr::summarise` function to generate a **total number of records** per year. By default, the `n()` function generates a new attribute (i.e., column), which we here name as "count".  
+We use `group_by` such that observations (i.e., rows) are grouped according to `Data Year`, which is the year when the energy record was taken. The result is then passed to `summarise` to generate a **total number of records** per year. By default, the `n()` function creates a new attribute (i.e., column), which we here name as "count".  
 
-Because there is no `<-` operator, the resulting table is displayed but **it is not stored** in an object that we can go back to later.
+Below we are using the same `group_by` + `summarise` chain to calculate the average GHG emissions of all buildings, and the average GHG emission intensity (use the column `Total GHG Emissions Intensity (kgCO2e/ft2)`). Note that we are now giving new names to each of the new columns.
 
-We can use the same `group_by` + `summarise` chain to calculate the **total GHG emissions** per year, just by identifying the right column to summarise. Note that we are now giving a new name to the year column too.
-
-```{r label=annualsum, message=FALSE, warning=FALSE}
+```{r label=annual_mean, message=FALSE, warning=FALSE}
 mit_energy |> 
   group_by(year = `Data Year`) |> 
   summarise(count = n(),
-            total_emission = sum(`Total GHG Emissions (Metric Tons CO2e)`))
+            avg_emission = mean(`Total GHG Emissions (Metric Tons CO2e)`),
+            avg_intensity = mean(`Total GHG Emissions Intensity (kgCO2e/ft2)`))
 ```
 
 ### Your practice
 
-1.  Modify the last code chunk to add more summary results for all MIT buildings. In a new code chunk, please display a table that shows the following results:
+**Insert a few new code chunks below this one to document your code and show your results.** 
 
--   the total number of reports per year,
--   the total GHG emission per year,
--   the average GHG emissions (divide your `total_emission` by `count`),
--   and the average GHG emission intensity (use the column `Total GHG Emissions Intensity (kgCO2e/ft2)`).
+1.  From the `mit_energy` dataset, create a subset of all **non-residential** buildings, which were built **before the year 2000**. (**Hint:** which function would you use?). How many such buildings are there?
 
-Your table should look like something like this:
+2.  From the `mit_energy` dataset, compare the GHG emissions by property type (**Hint:** which column has that information?), and generate a table that shows the following results:
 
-![](../img/lab1_table.PNG){fig-align="center" width="482"}
+    ![](../img/lab1_table.PNG){width="600"}
 
-2.  We mentioned that our resulting table is only displayed but not stored, now in your code chunk, add `summary_data <-` to store your output as a new object. Run the code and you should now see this object in RStudio Environment panel.
+You can create this table mostly by modifying the last code chunk (labeled "annual_mean"), however, there are a few small things you can experiment on:
 
-```{r label=result, message=FALSE, warning=FALSE, include=FALSE}
-summary_data <- mit_energy |> 
-    group_by(year = `Data Year`) |> 
-    summarise(count = n(),
-              total_emission = mean(`Total GHG Emissions (Metric Tons CO2e)`),
-              avg_emission = total_emission/count,
-              avg_intensity = mean(`Total GHG Emissions Intensity (kgCO2e/ft2)`)) 
+-   The calculated average numbers in this table are rounded to 2 decimals, how to achieve that?
+-   The table is arranged in descending order based on the "avg_emission" column, how to do that? ([Hint](https://dplyr.tidyverse.org/reference/arrange.html))
 
+We are already trying to ask questions and find hints of interesting stories from the dataset, which is what Exploratory Data Analysis (EDA) is all about. If the results so far look interesting/surprising/expected to you, write a few sentences describing what you see from the analysis.
+
+3.  Lastly, we will insert a map to complete your working document! This dataset includes "Longitude" and "Latitude" columns, which I like because it indicates that location information is available and can be visualized.
+
+    Add the following code to your document, and you should be able to run it and see a map. (If your R says it can't find `mapview`, run the line `install.packages("mapview")`)
+
+```{r label=mapview, message=FALSE, warning=FALSE}
+#install.packages("mapview")
+library(mapview)
+mapview(
+  mit_energy,
+  xcol = "Longitude", ycol = "Latitude",
+  crs = 4326,
+  grid = FALSE
+)
 ```
 
-If you used the same column name as our example, you should be able to directly run the subsequent code chunk and plot the emission stats over the years! (We will talk more about plotting so don't worry if it now looks unfamiliar).
+<b></b>
 
-```{r label=ggplot, message=FALSE, warning=FALSE}
-plot1 <- ggplot(summary_data)+
-  geom_line(aes(x = year, y = avg_emission))+
-  ggtitle("MIT buildings average GHG emissions (Metric Tons CO2e)")
-  
-plot2 <- ggplot(summary_data)+
-  geom_line(aes(x = year, y = avg_intensity))+
-  ggtitle("MIT buildings average GHG emission intensity (kgCO2e/ft2)")
-
-require(gridExtra)
-grid.arrange(plot1, plot2, nrow = 2)
-```
-
-Does this graph look interesting/surprising/expected to you? What else do you want to know if you want to delve deeper into this topic? To complete your working document, please write a few sentences describing your thoughts through analyzing this dataset. Now **Save**, **Render** it again, and Celebrate!
+Now **Save**, **Render** your document again. You have now created a pretty, multi-media document using R!
 
 ```         
 ------
 ```
 
-In this lab we have introduced how to create and develop a Quarto Document. We have also introduced some commonly-used `dplyr` funtions including `filter`, `group_by` and `summarise`. This is a soft introduction to `dplyr` and data wrangling in advance of the main event in Week 2.
+In this lab we have introduced how to create and develop a Quarto Document. We have also introduced some commonly-used `dplyr` funtions including `select`, `filter`, `mutate`, `group_by` and `summarise`. This is the beginning of our data wrangling and leads to the work in Week 2.
