--- a/labs/lab2.qmd
+++ b/labs/lab2.qmd
@@ -315,7 +315,7 @@ ggExtra::ggMarginal(p, type = "histogram", groupFill = TRUE)
 
 Please submit **a .qmd (or .Rmd) file** and **a** **knitted HTML file** that shows your work and responses for each of the **three** **Exercises** included in this lab.
 
-How many of these eligible census tracts are designated as Opportunity Zones? Are there any distinguishable differences in economic conditions between designated and not designated census tracts? Look back on our questions when we started and discuss what you have found so far, with a focus on Massachusetts. Make sure to include the required graph, along with any supplementary materials if this helps to convey your conclusions. Talk about any specific aspects you would like to further investigate on this question.
+Include a short write-up of approximately 250-300 words, that looks back on our questions when we started and discusses what you have found from our analysis so far, with a focus on the State of Massachusetts. Connect your findings with some broader discussions about Opportunities Zones found [here](https://www.urban.org/policy-centers/metropolitan-housing-and-communities-policy-center/projects/opportunity-zones). Talk about any specific aspects you would like to further investigate on this topic.
 
 Also, briefly comment on your experience with R during this lab exercise. Please **upload your report to Canvas** **by the end of day, Tuesday, Nov 7.**
 
